k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apmtips-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apmtips
spec:
  hosts:
  - "*"
  gateways:
  - apmtips-gateway
  http:
  - match:
    - scheme:
        exact: GET
    route:
    - destination:
        host: apmtips
        port:
          number: 80
